# rpc_server

./: .gitignore  README.md
example/callee/: CMakeLists.txt  userService.cc
src/: CMakeLists.txt  mprpcapplication.cc  mprpcconfig.cc  rpcprovider.cc
src/include/: mprpcapplication.h  mprpcconfig.h  rpcprovider.h
test/: test.conf
